fix-spacing-newTaskPanel

--- a/app/static/app/js/css/EditTaskForm.scss
+++ b/app/static/app/js/css/EditTaskForm.scss
@@ -242,7 +242,6 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        margin-bottom: 15px;
 
         .presets-dropdown {
             display: flex;
